Bug 1681918 - Don't try to use the shared font list in a content process if DWrite failed to get a reference to the system font collection. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D99437